<resources>
    <string name="app_name">Share Stories Apps</string>
    <string name="signup">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="message_welcome_page">Share exciting, happy, romantic moments with friends, family, or partners quickly in the palm of your hand!</string>
    <string name="title_welcome_page">Welcome Sharers!</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your data first</string>
    <string name="title_login_page">Are you ready to upgrade your skills?</string>
    <string name="name">Name</string>
    <string name="message_main_page">happy sharing your story!</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Exit</string>
    <string name="logoutBtn">logout</string>
    <string name="username_user">username_user</string>
    <string name="description">Description</string>
    <string name="date">date</string>
    <string name="add_story">Add Story</string>
    <string name="posted_on">Posted on:</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="enter_description">Enter description..</string>
    <string name="empty_image_warning">Please insert the image file first.</string>
    <string name="image_upload">Image Upload</string>
    <string name="story_photo">Story Photo</string>
    <string name="illustration">Illustration</string>
    <string name="share_your_stories_logo">Share your Stories Logo</string>
    <string name="setting">setting</string>
    <string name="password_error_message">Password must not be less than 8 characters</string>
    <string name="email_error_message">Invalid email</string>
    <string name="media_message">No media selected</string>
    <string name="register_success">Register has been successfully</string>
    <string name="title_activity_maps">Maps Story</string>
    <string name="maps">maps</string>
    <string name="retry">Retry</string>
    <string name="stories">Stories</string>
    <string name="detail_story">Detail Story</string>
</resources>